--- a/app/views/users/dailyupdate.html.erb
+++ b/app/views/users/dailyupdate.html.erb
@@ -305,33 +305,34 @@
         <div class="daily_bmi_update">
 
           <div class="row">
-            hellooo
+
             <%= nested_form_for @user, class: "form-control" do |f| %>
 
-            <div class="healthrecord">
-              <%= f.fields_for :bmis do |task_form| %>
-              <div class="col-xs-12 col-sm-12 col-md-2">
-                 <%= task_form.date_field :date_taken,required: true, class:"form-control", placeholder:"Date" %>
-              </div>
-              <div class="col-xs-12 col-sm-12 col-md-2">
-                 <%= task_form.time_field :time_taken,required: true,class:"form-control", placeholder:"Time" %>
-              </div>
-              <div class="col-xs-12 col-sm-12 col-md-4">
-                 <%= task_form.text_field :height,required: true,class:"form-control", placeholder: "Height(metre)" %>
-              </div>
-              <div class="col-xs-12 col-sm-12 col-md-2">
-                 <%= task_form.text_field :weight,required: true,class:"form-control", placeholder: "Weight(metre)" %>
-              </div>
-              <div class="col-xs-12 col-sm-12 col-md-2">
-                <%= task_form.link_to_remove "Remove this record", class: "btn btn-danger"%>
+          <div class="healthrecord">
+            <%= f.fields_for :bmis do |task_form| %>
+            <div class="col-xs-12 col-sm-12 col-md-2">
 
-              </div>
-              <% end %>
+               <%= task_form.date_field :date_taken,required: true, class:"form-control", placeholder:"Date" %>
             </div>
+            <div class="col-xs-12 col-sm-12 col-md-2">
+               <%= task_form.time_field :time_taken,required: true,class:"form-control", placeholder:"Time" %>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-4">
+               <%= task_form.text_field :height,required: true,class:"form-control", placeholder: "Height(metre)" %>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-2">
+               <%= task_form.text_field :weight,required: true,class:"form-control", placeholder: "Weight(metre)" %>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-2">
+              <%= task_form.link_to_remove "Remove this record", class: "btn btn-danger"%>
 
-            <%= f.link_to_add "Add a New Record", :glucoses, class: "btn btn-primary"%>
-              <%= f.submit "submit", class: "btn btn-warning" %>
+            </div>
             <% end %>
+          </div>
+
+          <%= f.link_to_add "Add a New Record", :bmis, class: "btn btn-primary"%>
+            <%= f.submit "submit", class: "btn btn-warning" %>
+          <% end %>
 
           </div>
 
