--- a/app/views/users/questionaire.html.erb
+++ b/app/views/users/questionaire.html.erb
@@ -3,7 +3,7 @@
   <!-- <script src="/assets/jquery_nested_form.js?body=1" type="text/javascript"></script> -->
 
     <div class="info">
-      <h2> Thank you for signing up! Let's start with some exciting quiz </h2>
+      <h2> Thank you for signing up! Let's start by answering some questions: </h2>
 
     </div>
     <%= nested_form_for(@user) do |f| %>
@@ -60,7 +60,7 @@
             <br>
         <% end %>
 
-          <%= f.link_to_add "Start Quiz", :results, class:"btn btn-info btn-block"%>
+          <%= f.link_to_add "Start", :results, class:"btn btn-info btn-block"%>
 
     <% end %>
 
