--- a/app/views/users/userdashboard.html.erb
+++ b/app/views/users/userdashboard.html.erb
@@ -144,7 +144,7 @@
 
                                                 <% end %>
                                               <% else %>
-                                                <span class="label label-danger value"><sup>0/<sub>0</sub></span>
+                                                <span class="label label-danger value">0</span>
                                             <% end %>
                                               <span class="measurement">mmHg (100-140 / 60-90)</span>
 
