--- a/app/views/users/dailyupdate.html.erb
+++ b/app/views/users/dailyupdate.html.erb
@@ -67,10 +67,12 @@
                   <%  @user_glucose.all.each do |health_record| %>
                    <tr>
 
+                     <td><%= health_record.date_taken%></td>
+                      <td><%= health_record.time_taken%></td>
                      <td><%= health_record.measurement%> </td>
                      <td><%= health_record.context %> </td>
-                     <td><%= health_record.date_taken%> </td>
-                     <td><%= health_record.time_taken%></td>
+
+
 
                    </tr>
                    <% end %>
@@ -179,7 +181,7 @@
                   </br>
                   </div>
                   <div class="col-xs-12 col-sm-12 col-md-3">
-                    <%= task_form.select :context, Pulse.contexts.keys.to_a, class: "form-control" %>
+                    <%= task_form.select :index, Pulse.indexs.keys.to_a, class: "form-control" %>
                   </br>
                   </div>
                    <%= task_form.link_to_remove "Remove this record", class: "btn btn-danger"%>
@@ -267,7 +269,6 @@
                 <thead>
                   <tr>
                     <td> Problem </td>
-                    <td> Diagnosis </td>
                     <td> Treatment</td>
                     <td> Clinic Name</td>
                     <td> Cost</td>
@@ -282,7 +283,6 @@
                    <tr>
 
                      <td><%= health_record.problem %> </td>
-                     <td><%= health_record.diagnosis %> </td>
                      <td><%= health_record.treatment %> </td>
                      <td><%= health_record.clinic_name %> </td>
                      <td><%= health_record.cost %> </td>
