--- a/app/views/users/dailyupdate.html.erb
+++ b/app/views/users/dailyupdate.html.erb
@@ -181,7 +181,7 @@
                   </br>
                   </div>
                   <div class="col-xs-12 col-sm-12 col-md-3">
-                    <%= task_form.select :index, Pulse.indexs.keys.to_a, class: "form-control" %>
+                    <%#= task_form.select :index, Pulse.id.keys.to_a, class: "form-control" %>
                   </br>
                   </div>
                    <%= task_form.link_to_remove "Remove this record", class: "btn btn-danger"%>
