--- a/app/views/users/dailyupdate.html.erb
+++ b/app/views/users/dailyupdate.html.erb
@@ -54,10 +54,10 @@
               <table class="table table-bordered custom">
                 <thead>
                   <tr>
-                    <td> Date Taken</td>
-                    <td>  Time Taken </td>
-                    <td> Measurement </td>
-                    <td> Index </td>
+                    <td>Date Taken</td>
+                    <td>Time Taken</td>
+                    <td>Measurement </td>
+                    <td>Index </td>
 
                   </tr>
                 </thead>
@@ -121,11 +121,11 @@
               <table class="table table-bordered custom">
                 <thead>
                   <tr>
-                    <td> sbp </td>
-                    <td> dpb </td>
-                    <td> Index</td>
                     <td> Date Taken </td>
                     <td> Time Taken </td>
+                    <td>SBP</td>
+                    <td>DBP</td>
+                    <td>Remarks</td>
                   </tr>
                 </thead>
 
@@ -133,13 +133,11 @@
                   <%if @user_pressure != nil  %>
                   <%  @user_pressure.all.each do |health_record| %>
                    <tr>
-
+                     <td><%= health_record.date_taken%> </td>
+                     <td><%= health_record.time_taken%></td>
                      <td><%= health_record.sbp %> </td>
                      <td><%= health_record.dpb %> </td>
                      <td><%= health_record.context %> </td>
-                     <td><%= health_record.date_taken%> </td>
-                     <td><%= health_record.time_taken%></td>
-
                    </tr>
                    <% end %>
                  <% end %>
@@ -149,14 +147,6 @@
 
             </div>
           </div>
-          <!----------------------------------------->
-
-<!---------------- PULSE START -------------------------------------->
-<!---------------- PULSE START -------------------------------------->
-<!---------------- PULSE START -------------------------------------->
-<!---------------- PULSE START -------------------------------------->
-<!---------------- PULSE START -------------------------------------->
-<!---------------- PULSE START -------------------------------------->
 
           <div id="menu3" class="tab-pane fade">
             <div class="daily_update_pulse">
