--- a/app/views/users/dailyupdate.html.erb
+++ b/app/views/users/dailyupdate.html.erb
@@ -321,7 +321,7 @@
                <%= task_form.text_field :height,required: true,class:"form-control", placeholder: "Height(metre)" %>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-2">
-               <%= task_form.text_field :weight,required: true,class:"form-control", placeholder: "Weight(metre)" %>
+               <%= task_form.text_field :user_weigh,required: true,class:"form-control", placeholder: "Weight(kg)" %>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-2">
               <%= task_form.link_to_remove "Remove this record", class: "btn btn-danger"%>
