updated pulse table

--- a/app/views/users/dailyupdate.html.erb
+++ b/app/views/users/dailyupdate.html.erb
@@ -185,10 +185,10 @@
             <table class="table table-bordered custom">
               <thead>
                 <tr>
-                  <td> Measurement </td>
-                  <td> Index </td>
-                  <td> Time Taken </td>
                   <td> Date Taken</td>
+                  <td> Time Taken </td>
+                  <td> Measurement </td>
+                  <td> Remarks </td>
                 </tr>
               </thead>
 
@@ -196,12 +196,10 @@
                 <%if @user_lungs != nil  %>
                 <%  @user_lungs.all.each do |health_record| %>
                  <tr>
-
+                   <td><%= health_record.date_taken%> </td>
+                   <td><%= health_record.time_taken %> </td>
                    <td><%= health_record.measurement %> </td>
                    <td><%= health_record.index %> </td>
-                   <td><%= health_record.time_taken %> </td>
-                   <td><%= health_record.date_taken%> </td>
-
                  </tr>
                  <% end %>
                <% end %>
