--- a/app/views/users/dailyupdate.html.erb
+++ b/app/views/users/dailyupdate.html.erb
@@ -328,9 +328,9 @@
               <tr>
                 <td> Date Taken</td>
                 <td> Time Taken </td>
-                <td> Height </td>
                 <td> Weight </td>
-                <td> Boddy Mass Index </td>
+                <td> Height </td>
+                <td> Body Mass Index </td>
 
               </tr>
             </thead>
