--- a/app/views/users/healthupload.html.erb
+++ b/app/views/users/healthupload.html.erb
@@ -18,8 +18,8 @@
 
                    <% end %>
                  </div>
-                 <%= f.link_to_add "Add Record", :healths, class: "btn btn-default btn-file-record"%>
-                 <%= f.submit "submit", class: "btn btn-warning-record", id: "submit-button" %>
+                 <%= f.link_to_add "Add Record", :healths, class: "btn btn-default btn-file"%>
+                 <%= f.submit "submit", class: "btn btn-warning", id: "submit-button" %>
                <% end %>
                 <br><br>
                 <span><b>Blood</b></span>
@@ -36,7 +36,7 @@
                    <div class="healthrecord">
                      <%= f.fields_for :healths do |task_form| %>
                         <%= task_form.hidden_field :record_category_id, value: 2%>
-                        <%= task_form.file_field :file, required: true %>
+                        <%= task_form.file_field :file %>
                        <%= task_form.link_to_remove "Remove this record", class: "btn btn-danger"%>
                        <%= task_form.submit "submit", class: "btn btn-warning" %>
                      <% end %>
@@ -299,10 +299,9 @@
 
   $(".btn-warning").hide();
   $(".healthrecord").hide();
-    $(".btn-warning-record").hide“”();
 
-  $(".btn-file-record").click(function(){
-      $(".btn-warning-record").show();
+  $(".btn-file").click(function(){
+      $(".btn-warning").show();
   });
 
 
