--- a/app/views/users/dailyupdate.html.erb
+++ b/app/views/users/dailyupdate.html.erb
@@ -402,7 +402,7 @@
                     <td> Date Taken</td>
                     <td> Time Taken </td>
                     <td> Rate</td>
-                    <td> Index </td>
+                    <td> Remarks </td>
 
                   </tr>
                 </thead>
